--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@ h1,h4
 </center>
 </body>
 
-<script src="C90_Student_Template.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
 
 </html>
